--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -769,21 +769,13 @@ body{
    (required on every Coinluxora page)
    + ✅ Anti-stuck AUTH GATE fix added
 ========================================================= */
-const SUPABASE_URL = "https://YOUR_PROJECT.supabase.co";
-const SUPABASE_ANON = "YOUR_ANON_KEY";
+const SUPABASE_URL = "https://xdcscknfomlzwysczegc.supabase.co";
+const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhkY3Nja25mb21send5c2N6ZWdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MTYzMDMsImV4cCI6MjA4MzI5MjMwM30.E6o2wFFMOpK1DghLUqnxG6Ig09djy4bmDQexprhAiB4";
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON);
 
 (async function authGuard(){
   const AUTH_MAX_WAIT = 9000; // 9s max
   let authTimeout = setTimeout(()=>{ location.replace('login.html'); }, AUTH_MAX_WAIT);
-
-  // If you forgot to set Supabase keys, don't freeze UI
-  if(SUPABASE_URL.includes('YOUR_PROJECT') || SUPABASE_ANON.includes('YOUR_ANON_KEY')){
-    clearTimeout(authTimeout);
-    setTimeout(()=>{ const g=document.getElementById('authGate'); if(g) g.style.display='none'; }, 800);
-    initDashboard({ email: 'demo@coinluxora.com' });
-    return;
-  }
 
   try{
     // 1) getSession FIRST (prevents login flash)
@@ -912,7 +904,7 @@ function setupAutoHighlight(){
     if(!visible.length) return;
     const centerY = window.innerHeight / 2;
     visible.sort((a,b)=>{
-      const ay = Math.abs((a.boundingClientRect.top + a.boundingClientRect.bottom)/2 - centerY);
+      const ay = Math.abs((a.boundingClientRect.top + a.boundingClientRect.bottom)/2 - centerYY);
       const by = Math.abs((b.boundingClientRect.top + b.boundingClientRect.bottom)/2 - centerY);
       return ay - by;
     });
