--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -868,7 +868,7 @@ body{
 
   <div class="helloCard">
     <div class="helloLeft">
-      <div class="helloLogo">💫</div>
+      <div class="helloLogo">🌐</div>
       <div>
         <div class="chips">
           <div class="miniChip">🟢 active</div>
@@ -896,7 +896,7 @@ body{
     <div class="actionGrid">
       <div class="action" onclick="goWithdrawAndClear()"><div class="aIcon aSend">✈️</div><div class="aText">Send</div></div>
       <div class="action" onclick="goDepositAndClear()"><div class="aIcon aReceive">⬇️</div><div class="aText">Receive</div></div>
-      <div class="action" onclick="goPlans()"><div class="aIcon aPlans">📈</div><div class="aText">Plans</div></div>
+      <div class="action" onclick="goPlans()"><div class="aIcon aPlans">〽️</div><div class="aText">Plans</div></div>
       <div class="action" onclick="goSupportAndClear()"><div class="aIcon aSupport">💬</div><div class="aText">Support</div></div>
     </div>
   </div>
